CHG: ZEFileCommon renamed as ZEFileUtils. CHG: Platform dependent code is separated into _Unix.cpp and _Windows.cpp files.
svn path=/trunk/; revision=969

--- a/Source/ZEFoundation/ZEFile/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEFile/CMakeLists.txt
@@ -41,8 +41,9 @@ include_directories(
 	
 ze_add_source(ZEFile.cpp				Sources)
 ze_add_source(ZEFile.h					Sources Headers)
-ze_add_source(ZEFileCommon.cpp			Sources)
-ze_add_source(ZEFileCommon.h			Sources)
+ze_add_source(ZEFileUtils_Unix.cpp		Sources PLATFORMS Unix)
+ze_add_source(ZEFileUtils_Windows.cpp	Sources PLATFORMS Windows)
+ze_add_source(ZEFileUtils.h				Sources)
 ze_add_source(ZEFileInfo.cpp			Sources)
 ze_add_source(ZEFileInfo.h				Sources Headers)
 ze_add_source(ZEFolderInfo.cpp			Sources)
@@ -50,10 +51,9 @@ ze_add_source(ZEFolderInfo.h			Sources Headers)
 ze_add_source(ZEFileTests.cpp			Tests)
 ze_add_source(ZEPartialFile.cpp			Sources)
 ze_add_source(ZEPartialFile.h			Sources Headers)
-
-ze_add_source(ZEPathManager_Windows.cpp	Sources)
+ze_add_source(ZEPathManager_Unix.cpp	Sources PLATFORMS Unix)
+ze_add_source(ZEPathManager_Windows.cpp	Sources PLATFORMS Windows)
 ze_add_source(ZEPathManager.h			Sources)
-
 ze_add_source(ZEPartialFileTests.cpp	Tests)
 ze_add_source(ZEFileCache.cpp			Sources)
 ze_add_source(ZEFileCache.h				Sources Headers)
