CHG: ZEFileUtils is ported to Unix. CHG: ZEFileInfo and ZEFolder Info is now platform independent and uses ZEFileUtils interface for all platform dependent tasks. CHG: ZEPathManager is ported to Unix.
svn path=/trunk/; revision=975

--- a/Source/ZEFoundation/ZEFile/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEFile/CMakeLists.txt
@@ -67,7 +67,7 @@ ze_add_source(ZEFileCacheTests.cpp		Tests)
 ze_add_library(ZEFile 
 	SOURCES ${Sources} 
 	HEADERS ${Headers}
-	LIBS libzlib ZEFoundation
+    LIBS ZEFoundation
 	INSTALL
 	INSTALL_DESTINATION ZEFoundation/ZEFile
 	INSTALL_COMPONENT ZESDK)
