--- a/Source/ZEFoundation/ZEFile/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEFile/CMakeLists.txt
@@ -43,21 +43,23 @@ ze_add_source(ZEDirectoryInfo.cpp		Sources)
 ze_add_source(ZEDirectoryInfo.h			Sources Headers)
 ze_add_source(ZEFile.cpp				Sources)
 ze_add_source(ZEFile.h					Sources Headers)
-ze_add_source(ZEFileUtils_Unix.cpp		Sources PLATFORMS Unix)
-ze_add_source(ZEFileUtils_Windows.cpp	Sources PLATFORMS Windows)
-ze_add_source(ZEFileUtils.h				Sources)
-ze_add_source(ZEFileInfo.cpp			Sources)
-ze_add_source(ZEFileInfo.h				Sources Headers)
-ze_add_source(ZEFileTests.cpp			Tests)
-ze_add_source(ZEPartialFile.cpp			Sources)
-ze_add_source(ZEPartialFile.h			Sources Headers)
-ze_add_source(ZEPathManager_Unix.cpp	Sources PLATFORMS Unix)
-ze_add_source(ZEPathManager_Windows.cpp	Sources PLATFORMS Windows)
-ze_add_source(ZEPathManager.h			Sources)
-ze_add_source(ZEPartialFileTests.cpp	Tests)
 ze_add_source(ZEFileCache.cpp			Sources)
 ze_add_source(ZEFileCache.h				Sources Headers)
 ze_add_source(ZEFileCacheTests.cpp		Tests)
+ze_add_source(ZEFileInfo.cpp			Sources)
+ze_add_source(ZEFileInfo.h				Sources Headers)
+ze_add_source(ZEFileTests.cpp			Tests)
+ze_add_source(ZEFileUtils.h				Sources)
+ze_add_source(ZEFileUtils_Unix.cpp		Sources PLATFORMS Unix)
+ze_add_source(ZEFileUtils_Windows.cpp	Sources PLATFORMS Windows)
+ze_add_source(ZEPartialFile.cpp			Sources)
+ze_add_source(ZEPartialFile.h			Sources Headers)
+ze_add_source(ZEPartialFileTests.cpp	Tests)
+ze_add_source(ZEPathManager_Unix.cpp	Sources PLATFORMS Unix)
+ze_add_source(ZEPathManager_Windows.cpp	Sources PLATFORMS Windows)
+ze_add_source(ZEPathManager.h			Sources)
+ze_add_source(ZEPathUtils.cpp			Sources)
+ze_add_source(ZEPathUtils.h				Sources)
 
 ze_add_library(ZEFile 
 	SOURCES ${Sources} 
