IMP: ZETimeCounter has been improved. FIX: ZETimeCounter Unix implementation has been fixed. ADD: Thread naming capability has been added to ZEThread.
svn path=/trunk/; revision=990

--- a/Source/ZEFoundation/CMakeLists.txt
+++ b/Source/ZEFoundation/CMakeLists.txt
@@ -78,3 +78,5 @@ ze_add_library(ZEFoundation
 	INSTALL
 	INSTALL_DESTINATION ZEFoundation
 	INSTALL_COMPONENT ZESDK)
+
+ze_link(ZEFoundation LIBS rt PLATFORMS Unix)
