FIX: ZEList.h, ZEListIterators.h and ZEListTests.cpp bugs fixed. ADD: ZEListIteratorsTests.cpp added.
svn path=/trunk/; revision=995

--- a/Source/ZEFoundation/ZEDS/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEDS/CMakeLists.txt
@@ -64,6 +64,7 @@ ze_add_source(ZEList.h					Sources Headers)
 ze_add_source(ZEListTests.cpp				Tests)
 ze_add_source(ZEListIterators.cpp			Sources)
 ze_add_source(ZEListIterators.h				Sources Headers)
+ze_add_source(ZEListIteratorsTests.cpp			Tests)
 ze_add_source(ZETree.cpp				Sources)
 ze_add_source(ZETree.h					Sources Headers)
 ze_add_source(ZEGraph.cpp				Sources)
