FIX: ZRTimeCounter resolution has been fixed. REN: Major refactoring on ZELock and ZESystemLock.
svn path=/trunk/; revision=996

--- a/Source/ZEFoundation/ZEThread/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEThread/CMakeLists.txt
@@ -58,3 +58,5 @@ ze_add_library(ZEThread
 	INSTALL
 	INSTALL_DESTINATION ZEFoundation/ZEThread
 	INSTALL_COMPONENT ZESDK)
+
+ze_link(ZEThread PLATFORMS Unix LIBS pthread)
