CHG: ZEViewPort Class Refactored into ZERenderTarget ADD: State Classes Added. (ZEBlendState, ZERasterizerState, ZESamplerState, ZEStencilZState) ADD: Graphics Device Class Added. Responsible for changing device state and sending draw calls, setting shader stages (pixel and vertex only), changing render targets etc. ADD: D3D9 Version of Graphics Device Implemented. IMP: ZEShader Class Improved. It is responsible for setting constant with constants identifier as well as direct register number. All Shaders now compile themselves. IMP: D3D9 Version of the Shader Classes improved(ZED3D9Shader, ZED3D9PixelShader, ZED3D9VertexShader) according to abstract implementation of ZEShader Class.
svn path=/branches/v0.6.1-NewGraphics/; revision=1006

--- a/Source/ZEEngine/ZEGraphics/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGraphics/CMakeLists.txt
@@ -37,7 +37,8 @@ cmake_minimum_required(VERSION 2.8)
 
 add_subdirectory(ZEPostProcessor)
 
-
+ze_add_source(ZEBlendState.cpp						Sources)
+ze_add_source(ZEBlendState.h						Sources Headers)
 ze_add_source(ZECamera.cpp							Sources)
 ze_add_source(ZECamera.h							Sources Header ZEPP)
 ze_add_source(ZECanvas.cpp							Sources)
@@ -52,6 +53,8 @@ ze_add_source(ZEFrameRenderer.cpp 					Sources)
 ze_add_source(ZEFrameRenderer.h 					Sources Headers)
 ze_add_source(ZEGraphicsDebugModule.cpp				Sources)
 ze_add_source(ZEGraphicsDebugModule.h				Sources)
+ze_add_source(ZEGraphicsDevice.cpp					Sources)
+ze_add_source(ZEGraphicsDevice.h					Sources Headers)
 ze_add_source(ZEGraphicsModule.cpp 					Sources)
 ze_add_source(ZEGraphicsModule.h 					Sources Header)
 ze_add_source(ZEIndexBuffer.cpp 					Sources)
@@ -73,10 +76,18 @@ ze_add_source(ZEPointLight.cpp 						Sources)
 ze_add_source(ZEPointLight.h 						Sources Header ZEPP)
 ze_add_source(ZEProjectiveLight.cpp 				Sources)
 ze_add_source(ZEProjectiveLight.h 					Sources Header ZEPP)
+ze_add_source(ZERasterizerState.cpp 				Sources)
+ze_add_source(ZERasterizerState.h 					Sources Headers)
 ze_add_source(ZERenderer.cpp 						Sources)
 ze_add_source(ZERenderer.h 							Sources Headers)
 ze_add_source(ZERenderCommand.cpp 					Sources)
 ze_add_source(ZERenderCommand.h 					Sources Headers)
+ze_add_source(ZERenderTarget.cpp 					Sources)
+ze_add_source(ZERenderTarget.h 						Sources Headers)
+ze_add_source(ZESamplerState.cpp 					Sources)
+ze_add_source(ZESamplerState.h 						Sources Headers)
+ze_add_source(ZEShader.cpp 							Sources)
+ze_add_source(ZEShader.h 							Sources Headers)
 ze_add_source(ZEShadowRenderer.cpp 					Sources)
 ze_add_source(ZEShadowRenderer.h 					Sources Headers)
 ze_add_source(ZESimpleMaterial.cpp 					Sources)
@@ -85,6 +96,8 @@ ze_add_source(ZESkyBoxMaterial.cpp 					Sources)
 ze_add_source(ZESkyBoxMaterial.h 					Sources Header)
 ze_add_source(ZESkyDomeMaterial.cpp 				Sources)
 ze_add_source(ZESkyDomeMaterial.h 					Sources Header)
+ze_add_source(ZEStencilZState.cpp					Sources)
+ze_add_source(ZEStencilZState.h						Sources Headers)
 ze_add_source(ZETerrainMaterial.cpp					Sources)
 ze_add_source(ZETerrainMaterial.h 					Sources Headers ZEPP)
 ze_add_source(ZETexture.cpp 						Sources)
@@ -103,9 +116,6 @@ ze_add_source(ZEVertexDeclaration.cpp				Sources)
 ze_add_source(ZEVertexDeclaration.h					Sources Headers)
 ze_add_source(ZEVertexTypes.cpp 					Sources)
 ze_add_source(ZEVertexTypes.h 						Sources Headers)
-ze_add_source(ZEViewPort.cpp 						Sources)
-ze_add_source(ZEViewPort.h 							Sources Headers)
-
 
 ze_add_library(ZEGraphics 
 	SOURCES ${Sources}
