--- a/Source/ZEModules/ZEDirect3D9/CMakeLists.txt
+++ b/Source/ZEModules/ZEDirect3D9/CMakeLists.txt
@@ -82,6 +82,8 @@ ze_add_source(ZED3D9FrameRenderer.cpp					Sources)
 ze_add_source(ZED3D9FrameRenderer.h						Sources)
 ze_add_source(ZED3D9GrainProcessor.cpp					Sources)
 ze_add_source(ZED3D9GrainProcessor.h					Sources)
+ze_add_source(ZED3D9GraphicsDevice.cpp					Sources)
+ze_add_source(ZED3D9GraphicsDevice.h					Sources)
 ze_add_source(ZED3D9HDRProcessor.cpp					Sources)
 ze_add_source(ZED3D9HDRProcessor.h						Sources ZEPP)
 ze_add_source(ZED3D9IndexBuffer.cpp						Sources)
@@ -96,6 +98,8 @@ ze_add_source(ZED3D9MoonMaterial.cpp					Sources)
 ze_add_source(ZED3D9MoonMaterial.h						Sources)
 ze_add_source(ZED3D9Profiler.cpp						Sources)
 ze_add_source(ZED3D9Profiler.h							Sources)
+ze_add_source(ZED3D9RenderTarget.cpp					Sources)
+ze_add_source(ZED3D9RenderTarget.h						Sources)
 ze_add_source(ZED3D9Shader.cpp							Sources)
 ze_add_source(ZED3D9Shader.h							Sources)
 ze_add_source(ZED3D9ShaderManager.cpp					Sources)
@@ -134,8 +138,6 @@ ze_add_source(ZED3D9VertexBuffer.cpp					Sources)
 ze_add_source(ZED3D9VertexBuffer.h						Sources)
 ze_add_source(ZED3D9VertexDeclaration.cpp				Sources)
 ze_add_source(ZED3D9VertexDeclaration.h					Sources)
-ze_add_source(ZED3D9ViewPort.cpp						Sources)
-ze_add_source(ZED3D9ViewPort.h							Sources)
 ze_add_source(ZED3D9ZoomBlurProcessor.cpp				Sources)
 ze_add_source(ZED3D9ZoomBlurProcessor.h					Sources)
 	
