ADD: ZEDepthBuffer Class and DirectX9 equivalent ZED3D9DeptBuffer class added. Those classes need improvement and not final. CHG: ZEGraphicsDevice Class Modified to change current DepthStencilBuffer using DepthBuffer classes. CHG: ZETexture Abstract class now has GetTextureHandle(). This method used by Graphics Device class to set texture to buffer regardless of texture type. (ZETexture2D, ZETexture3D, ZETextureCube) CHG: ZED3D9Texture3D, ZED3D9Texture2D, ZED3D9TextureCube classes implemented ZETexture new abstract method. CHG: ZEGraphicsDevice now ignore state change if a requested state is NULL. This will prevent uninitialized Graphics device crash. you can use current state if you set the VertexDeclaration, RenderTarget, Shader states to NULL.
svn path=/branches/v0.6.1-NewGraphics/; revision=1009

--- a/Source/ZEEngine/ZEGraphics/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGraphics/CMakeLists.txt
@@ -45,6 +45,8 @@ ze_add_source(ZECanvas.cpp							Sources)
 ze_add_source(ZECanvas.h 							Sources Headers)
 ze_add_source(ZECloudMaterial.cpp					Sources)
 ze_add_source(ZECloudMaterial.h 					Sources Headers)
+ze_add_source(ZEDepthBuffer.cpp						Sources)
+ze_add_source(ZEDepthBuffer.h						Sources Headers)
 ze_add_source(ZEDirectionalLight.cpp	 			Sources)
 ze_add_source(ZEDirectionalLight.h					Sources Header ZEPP)
 ze_add_source(ZEFixedMaterial.cpp 					Sources)
