--- a/Source/ZEModules/ZEDirect3D9/CMakeLists.txt
+++ b/Source/ZEModules/ZEDirect3D9/CMakeLists.txt
@@ -70,6 +70,8 @@ ze_add_source(ZED3D9CommonTools.cpp						Sources)
 ze_add_source(ZED3D9CommonTools.h						Sources)
 ze_add_source(ZED3D9ComponentBase.cpp					Sources)
 ze_add_source(ZED3D9ComponentBase.h						Sources)
+ze_add_source(ZED3D9DepthBuffer.cpp						Sources)
+ze_add_source(ZED3D9DepthBuffer.h						Sources)
 ze_add_source(ZED3D9DOFProcessor.cpp					Sources)
 ze_add_source(ZED3D9DOFProcessor.h						Sources)
 ze_add_source(ZED3D9EDProcessor.cpp						Sources)
