ADD: Post process effect ZED3D9CRTScanProcessor implemented with new shader system. CHG: ZED3D9GrainProcessor ported to new shader system. CHG: A projective texture is added to Carter module.
svn path=/branches/v0.6.1-NewGraphics/; revision=1012

--- a/Source/ZEModules/ZEDirect3D9/CMakeLists.txt
+++ b/Source/ZEModules/ZEDirect3D9/CMakeLists.txt
@@ -64,6 +64,10 @@ ze_add_source(ZED3D9ChannelDisorientationProcessor.cpp	Sources)
 ze_add_source(ZED3D9ChannelDisorientationProcessor.h	Sources)
 ze_add_source(ZED3D9CloudMaterial.cpp					Sources)
 ze_add_source(ZED3D9CloudMaterial.h						Sources)
+
+ze_add_source(ZED3D9CRTScanProcessor.cpp				Sources)
+ze_add_source(ZED3D9CRTScanProcessor.h					Sources)
+
 ze_add_source(ZED3D9ColorTransformProcessor.cpp			Sources)
 ze_add_source(ZED3D9ColorTransformProcessor.h			Sources)
 ze_add_source(ZED3D9CommonTools.cpp						Sources)
