ADD: ZEStringWriter, which is used for fastly generating dynamic string, has been added. ADD: ZEFormat, which is used for formatting texts, has been added.
svn path=/trunk/; revision=1024

--- a/Source/ZEFoundation/ZEDS/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEDS/CMakeLists.txt
@@ -91,7 +91,8 @@ ze_add_source(ZEPointerTestClass.cpp	Tests)
 ze_add_source(ZEFormat.h				Sources Headers)
 ze_add_source(ZEFormat.cpp				Sources Headers)
 ze_add_source(ZEFormatOverloads.cpp		Sources Headers)
-
+ze_add_source(ZEStringWriter.cpp		Sources)
+ze_add_source(ZEStringWriter.h			Sources Headers)
 ze_add_library(ZEDS 
 	SOURCES ${Sources} 
 	HEADERS ${Headers}
