CHG: New Shader Compile System Integrated with ShaderManager Class. CHG: DX9CRTScanProcessor, DX9GrainProcessor now using Integrated Shader Compilation. FIX: ZED3D9DepthBuffer class should inherit ZEDepthBuffer. ADD: ZEOpenGL Module Created. ADD: ZEGLGraphicsDevice Class Implemented. ADD: Various Class Bodies used by ZEGLGraphicsDevice Created but NOT IMPLEMENTED COMPLETELY. (ZEGLVertexBuffer, ZEGLIndexBuffer, ZEGLDepthBuffer, ZEGLRenderTarget, ZEGLShader and ZEGLTexture(3D)(2D)(Cube) ) ADD: OpenGL Extension wrangler (GLEW) libraries integrated to ZEOpenGL module. ADD: Nvidia CG Shader libraries integrated to ZEOpenGL module. CHG: ColorChannel Mask changed to ZEFlag in ZEBlendState class. FIX: Various Code Logic Typos in ZED3D9GraphicsDevice class fixed.
svn path=/branches/v0.6.1-NewGraphics/; revision=1027

--- a/Source/ZEEngine/CMakeLists.txt
+++ b/Source/ZEEngine/CMakeLists.txt
@@ -74,7 +74,7 @@ ze_add_library(ZEEngineAPI
 	HEADERS ${Headers}
 	LIBS ZEFoundation
 		ZECore ZEGraphics ZEInput ZEMeta ZEPhysics ZESound ZEUI ZEGame ZEMap ZEPortalMap ZEModel ZEParticle
-		ZEDirect3D9 ZEWindowsInput ZEDirectSound ZEOpenAL ZEPhysX ZEVRPNInput ZEAI ZETerrain ZENetwork ZETexture
+		ZEDirect3D9 ZEWindowsInput ZEDirectSound ZEOpenAL ZEPhysX ZEVRPNInput ZEAI ZETerrain ZENetwork ZETexture ZEOpenGL
 	INSTALL
 	INSTALL_DESTINATION "ZEEngineAPI"
 	INSTALL_COMPONENT ZESDK)
