--- a/Source/ZEModules/CMakeLists.txt
+++ b/Source/ZEModules/CMakeLists.txt
@@ -47,5 +47,6 @@ ze_add_module(ZEVRPNInput			OPTIONAL DEFAULT PLATFORMS Windows Linux MacOSX BSD)
 ze_add_module(ZEDirectSound			OPTIONAL DEFAULT PLATFORMS Windows)
 ze_add_module(ZEOpenAL				OPTIONAL DEFAULT PLATFORMS Windows Linux MacOSX BSD)
 ze_add_module(ZEPhysX				OPTIONAL DEFAULT PLATFORMS Windows Linux MacOSX BSD)
+ze_add_module(ZEOpenGL				OPTIONAL PLATFORMS Windows Linux MacOSX BSD)
 
 ze_add_cmake_project(ZEModules_ SOURCES CMakeLists.txt)
