--- a/Source/ZEEngine/ZEMap/CMakeLists.txt
+++ b/Source/ZEEngine/ZEMap/CMakeLists.txt
@@ -45,6 +45,7 @@ ze_add_source(ZEMapResource.h		Sources Headers)
 ze_add_library(ZEMap 
 	SOURCES ${Sources}
 	HEADERS ${Headers}
+	LIBS ZEFoundation
 	INSTALL
 	INSTALL_DESTINATION "ZEEngineAPI/ZEMap"
 	INSTALL_COMPONENT ZESDK)
