--- a/Source/ZEEngine/ZEModel/CMakeLists.txt
+++ b/Source/ZEEngine/ZEModel/CMakeLists.txt
@@ -61,6 +61,7 @@ ze_add_source(ZEModelResource.h				Sources Headers)
 ze_add_library(ZEModel 
 	SOURCES ${Sources}
 	HEADERS ${Headers}
+	LIBS ZEFoundation
 	INSTALL
 	INSTALL_DESTINATION "ZEEngineAPI/ZEModel"
 	INSTALL_COMPONENT ZESDK)
