--- a/Source/ZEEngine/ZEParticle/CMakeLists.txt
+++ b/Source/ZEEngine/ZEParticle/CMakeLists.txt
@@ -73,6 +73,7 @@ ze_add_source(ZEParticleRandomAccelerationOperator.h	Sources Headers ZEPP)
 ze_add_library(ZEParticle 
 	SOURCES ${Sources}
 	HEADERS ${Headers}
+	LIBS ZEFoundation
 	INSTALL
 	INSTALL_DESTINATION "ZEEngineAPI/ZEParticle"
 	INSTALL_COMPONENT ZESDK)
