--- a/Source/ZEEngine/ZECore/CMakeLists.txt
+++ b/Source/ZEEngine/ZECore/CMakeLists.txt
@@ -98,6 +98,7 @@ ze_add_source(ZETimerManager.h						Sources Headers)
 ze_add_library(ZECore 
 	SOURCES ${Sources}
 	HEADERS ${Headers}
+	LIBS ZEFoundation
 	INSTALL
 	INSTALL_DESTINATION "ZEEngineAPI/ZECore"
 	INSTALL_COMPONENT ZESDK)
