--- a/Source/ZEEngine/ZEGraphics/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGraphics/CMakeLists.txt
@@ -110,7 +110,7 @@ ze_add_source(ZEViewPort.h 							Sources Headers)
 ze_add_library(ZEGraphics 
 	SOURCES ${Sources}
 	HEADERS ${Headers}
-	LIBS ZEDS
+	LIBS ZEFoundation libfreeimage
 	INSTALL
 	INSTALL_DESTINATION "ZEEngineAPI/ZEGraphics"
 	INSTALL_COMPONENT Header)
