--- a/Source/ZEEngine/ZEMeta/CMakeLists.txt
+++ b/Source/ZEEngine/ZEMeta/CMakeLists.txt
@@ -57,6 +57,7 @@ ze_add_source(ZEProvider.h				Sources Headers)
 ze_add_library(ZEMeta 
 	SOURCES ${Sources}
 	HEADERS ${Headers}
+	LIBS ZEFoundation
 	INSTALL
 	INSTALL_DESTINATION "ZEEngineAPI/ZEMeta"
 	INSTALL_COMPONENT ZESDK)
