--- a/Source/ZEEngine/ZETerrain/CMakeLists.txt
+++ b/Source/ZEEngine/ZETerrain/CMakeLists.txt
@@ -45,6 +45,7 @@ ze_add_source(ZETerrainVertexBuffer.h		Sources)
 ze_add_library(ZETerrain 
 	SOURCES ${Sources}
 	HEADERS ${Headers}
+	LIBS ZEFoundation
 	INSTALL
 	INSTALL_DESTINATION "ZEEngineAPI/ZETerrain"
 	INSTALL_COMPONENT ZESDK)
