MOD: ZEString is modified to use UTF-8 encoding internally, also contains UTF-16 wide character support. Upper/Lowercase functionalities are only for ASCII characters. Also All To/From numeric value functionalities are stalled for ZEFormat integration. ZEString Tests are updated. ADD: ZECharacter class added for handling multi-byte UTF-8 characters. ZECharacter Tests are added. MOD: ZEVariant assignment operators are modified to return reference to that ZEVariant. ADD: Missing ZEVariant assignment operator implementation for ZEObject is implemented.
svn path=/trunk/; revision=1033

--- a/Source/ZEFoundation/ZEDS/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEDS/CMakeLists.txt
@@ -81,6 +81,7 @@ ze_add_source(ZEWeakPointerTests.cpp	Tests)
 ze_add_source(ZEString.cpp				Sources)
 ze_add_source(ZEString.h				Sources Headers)
 ze_add_source(ZEStringTests.cpp			Tests)
+ze_add_source(ZECharacterTests.cpp			Tests)
 ze_add_source(ZETypedVariant.cpp		Sources)
 ze_add_source(ZETypedVariant.h			Sources Headers)
 ze_add_source(ZEVariant.cpp				Sources)
