FIX: ZEFile.cpp 's bool ZEFile::ReadFile(const ZEString& FilePath, void* Buffer, const ZESize BufferSize) and bool ZEFile::ReadTextFile(const ZEString& FilePath, char* Buffer, const ZESize BufferSize) functions AbsolutePath's bug fixed by adding seperator between resources path and FilePath. FIX: ZEPathUtils.cpp 's ZEKnownPath ZEPathUtils::SearchForSymbol(ZEString* RelativePart, const ZEString& SymbolicPath) function RelativePart path bug fixed for situation nothing found by adding seperator in front of SymbolicPath. FIX: <TEST> ZEFileTests.cpp, ZEPartialFileTests.cpp, ZEFileCacheTests.cpp changed according to new ZEFile. ADD: ZEDirectoryInfoTests.cpp, ZEFileInfoTests.cpp, ZEFileUtilsTests.cpp, ZEPathManagerTests.cpp, ZEPathUtilsTests.cpp added.
svn path=/trunk/; revision=1049

--- a/Source/ZEFoundation/ZEFile/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEFile/CMakeLists.txt
@@ -41,29 +41,34 @@ include_directories(
 	
 ze_add_source(ZEDirectoryInfo.cpp			Sources)
 ze_add_source(ZEDirectoryInfo.h				Sources Headers)
-ze_add_source(ZEFile.cpp					Sources)
-ze_add_source(ZEFile.h						Sources Headers)
+ze_add_source(ZEDirectoryInfoTests.cpp			Tests)
+ze_add_source(ZEFile.cpp				Sources)
+ze_add_source(ZEFile.h					Sources Headers)
 ze_add_source(ZEFileCache.cpp				Sources)
-ze_add_source(ZEFileCache.h					Sources Headers)
+ze_add_source(ZEFileCache.h				Sources Headers)
 ze_add_source(ZEFileCacheTests.cpp			Tests)
 ze_add_source(ZEFileInfo.cpp				Sources)
-ze_add_source(ZEFileInfo.h					Sources Headers)
+ze_add_source(ZEFileInfo.h				Sources Headers)
+ze_add_source(ZEFileInfoTests.cpp			Tests)
 ze_add_source(ZEFileTests.cpp				Tests)
-ze_add_source(ZEFileOperations_Unix.cpp		Sources PLATFORMS Unix)
-ze_add_source(ZEFileOperations_Windows.cpp	Sources PLATFORMS Windows)
+ze_add_source(ZEFileOperations_Unix.cpp			Sources PLATFORMS Unix)
+ze_add_source(ZEFileOperations_Windows.cpp		Sources PLATFORMS Windows)
 ze_add_source(ZEFileOperations.h			Sources Headers)
-ze_add_source(ZEFileOperationsTests.cpp		Tests)
+ze_add_source(ZEFileOperationsTests.cpp			Tests)
 ze_add_source(ZEFileUtils_Unix.cpp			Sources PLATFORMS Unix)
-ze_add_source(ZEFileUtils_Windows.cpp		Sources PLATFORMS Windows)
-ze_add_source(ZEFileUtils.h					Sources Headers)
+ze_add_source(ZEFileUtils_Windows.cpp			Sources PLATFORMS Windows)
+ze_add_source(ZEFileUtils.h				Sources Headers)
+ze_add_source(ZEFileUtilsTests.cpp			Tests)
 ze_add_source(ZEPartialFile.cpp				Sources)
 ze_add_source(ZEPartialFile.h				Sources Headers)
-ze_add_source(ZEPartialFileTests.cpp		Tests)
-ze_add_source(ZEPathManager_Unix.cpp		Sources PLATFORMS Unix)
-ze_add_source(ZEPathManager_Windows.cpp		Sources PLATFORMS Windows)
+ze_add_source(ZEPartialFileTests.cpp			Tests)
+ze_add_source(ZEPathManager_Unix.cpp			Sources PLATFORMS Unix)
+ze_add_source(ZEPathManager_Windows.cpp			Sources PLATFORMS Windows)
 ze_add_source(ZEPathManager.h				Sources)
+ze_add_source(ZEPathManagerTests.cpp			Tests)
 ze_add_source(ZEPathUtils.cpp				Sources)
-ze_add_source(ZEPathUtils.h					Sources)
+ze_add_source(ZEPathUtils.h				Sources)
+ze_add_source(ZEPathUtilsTests.cpp			Tests)
 
 ze_add_library(ZEFile 
 	SOURCES ${Sources} 
