ADD: ZEMacro library, which is used for creating preprocessor procedures, has been added. CHG: ZEDelegate migrated to ZEMacro library. ADD: ZEFormat argument formating routines has been moved to new class named ZEFormatArgument. CHG: ZEFormat class has been modified to use ZEFormatArgument. FIX: ZEString SetValue and FromXXXX functions format parameter syntax bugs fixed. CHG: ZEString has been modified to uze ZEFormatArgument.
svn path=/trunk/; revision=1051

--- a/Source/ZEFoundation/CMakeLists.txt
+++ b/Source/ZEFoundation/CMakeLists.txt
@@ -44,6 +44,7 @@ add_subdirectory(ZEMath)
 add_subdirectory(ZESerialization)
 add_subdirectory(ZEStateMachine)
 add_subdirectory(ZEFile)
+add_subdirectory(ZEMacro)
 add_subdirectory(ZESpatial)
 add_subdirectory(ZESerialPort)
 add_subdirectory(ZETest)
