--- a/Source/ZEFoundation/ZEDS/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEDS/CMakeLists.txt
@@ -86,11 +86,13 @@ ze_add_source(ZETypedVariant.cpp		Sources)
 ze_add_source(ZETypedVariant.h			Sources Headers)
 ze_add_source(ZEVariant.cpp				Sources)
 ze_add_source(ZEVariant.h				Sources Headers)
-ze_add_source(ZEVariantTests.cpp		Tests)
+#ze_add_source(ZEVariantTests.cpp		Tests)
 ze_add_source(ZEPointerTestClass.h		Tests)
 ze_add_source(ZEPointerTestClass.cpp	Tests)
 ze_add_source(ZEFormat.h				Sources Headers)
 ze_add_source(ZEFormat.cpp				Sources Headers)
+ze_add_source(ZEFormatArgument.h		Sources)
+ze_add_source(ZEFormatArgument.cpp		Sources)
 ze_add_source(ZEFormatOverloads.cpp		Sources Headers)
 ze_add_source(ZEStringWriter.cpp		Sources)
 ze_add_source(ZEStringWriter.h			Sources Headers)
