ADD: ZEGUID class, which is used for representing global unique identifiers, has been added. ADD: Format arguments has been optimized. Many dynamic allocations has been converted to stack allocations by converting ZEString parameters to regular char arrays. IMP: ZERandom::GetUIntXX and ZERandom::GetIntXX overloads, which produces full precision random numbers instead of RND_MAX, has been added. IMP: ZEFormat::Format max parameter count has been improved to 25.
svn path=/trunk/; revision=1054

--- a/Source/ZEFoundation/CMakeLists.txt
+++ b/Source/ZEFoundation/CMakeLists.txt
@@ -57,6 +57,8 @@ ze_add_source(ZEDLL.h 				Sources Headers)
 ze_add_source(ZEDLL.cpp 			Sources)
 ze_add_source(ZECommon.h 			Sources Headers)
 ze_add_source(ZECommon.cpp 			Sources)
+ze_add_source(ZEGUID.h 				Sources Headers)
+ze_add_source(ZEGUID.cpp 			Sources)
 ze_add_source(ZETypes.h 			Sources Headers)
 ze_add_source(ZETypes.cpp 			Sources)
 ze_add_source(ZEEndian.h 			Sources Headers)
